src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>IP_Client_Type__c</fullName>
        <inlineHelpText>Type of organization.</inlineHelpText>
        <label>SUSA Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign Firm</fullName>
                </value>
                <value>
                    <fullName>U.S. Firm</fullName>
                </value>
                <value>
                    <fullName>U.S. EDO</fullName>
                </value>
                <value>
                    <fullName>U.S. State/Local Government</fullName>
                </value>
                <value>
                    <fullName>Foreign EDO</fullName>
                </value>
                <value>
                    <fullName>Foreign Government</fullName>
                </value>
                <value>
                    <fullName>Service Provider/Consultant/Lawyer</fullName>
                </value>
                <value>
                    <fullName>Trade Association</fullName>
                </value>
                <value>
                    <fullName>Academia/Research</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_EDO_Type__c</fullName>
        <description>Investment Promotion EDO Type</description>
        <inlineHelpText>Describes the type of EDO.</inlineHelpText>
        <label>SUSA EDO Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Service_Provided_to_Date_Summary__c</fullName>
        <description>Investment Promotion Service Provided to Date Summary</description>
        <inlineHelpText>A summary of actions provided.</inlineHelpText>
        <label>SUSA Service Provided to Date Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITA_Action_Plan__c</fullName>
        <label>ITA Action Plan</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImportCountry__c</fullName>
        <label>Import Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Rollup_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to calculate the number of related industry in case object.</description>
        <label>Industry Rollup Sum</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Sector__c</fullName>
        <description>The type of industry the Organization is in/the Case pertains to:</description>
        <label>Industry Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Services</fullName>
                </value>
                <value>
                    <fullName>Advanced Ceramics</fullName>
                </value>
                <value>
                    <fullName>Advertising Services</fullName>
                </value>
                <value>
                    <fullName>Agricultural Chemicals</fullName>
                </value>
                <value>
                    <fullName>Agricultural Machinery &amp; Eq.</fullName>
                </value>
                <value>
                    <fullName>Agricultural Products</fullName>
                </value>
                <value>
                    <fullName>Agricultural Services</fullName>
                </value>
                <value>
                    <fullName>Air Conditioning/Refrigeration Eq.</fullName>
                </value>
                <value>
                    <fullName>Aircraft/Aircraft Parts</fullName>
                </value>
                <value>
                    <fullName>Airport/Ground Support Eq.</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Architectural/Constr./Engineering SVC</fullName>
                </value>
                <value>
                    <fullName>Artwork</fullName>
                </value>
                <value>
                    <fullName>Audio/Visual Eq.</fullName>
                </value>
                <value>
                    <fullName>Automobile/Light Truck/Vans</fullName>
                </value>
                <value>
                    <fullName>Automotive Parts/Services Eq.</fullName>
                </value>
                <value>
                    <fullName>Aviation Services</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Books/Periodicals</fullName>
                </value>
                <value>
                    <fullName>Building Products</fullName>
                </value>
                <value>
                    <fullName>Business Eq. (Non-Computer)</fullName>
                </value>
                <value>
                    <fullName>Chemical Production Machinery</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Commercial Fishing Eq.</fullName>
                </value>
                <value>
                    <fullName>Commercial Vessel/Eq. (Non-Fisheries)</fullName>
                </value>
                <value>
                    <fullName>Composite Materials</fullName>
                </value>
                <value>
                    <fullName>Computers/Peripherals</fullName>
                </value>
                <value>
                    <fullName>Computer Services</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Construction Eq.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalGroupMailingLists__c</fullName>
        <label>InternalGroupMailingLists</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Investment_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifier for activities for reporting</description>
        <label>Investment Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_WINs_associated_to_Case__c</fullName>
        <label>Number of WINs associated to Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_City__c</fullName>
        <description>Organization City</description>
        <formula>Account.BillingCity</formula>
        <label>Org City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <label>Org Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_County__c</fullName>
        <description>3/12/2015 - Changed from &quot;Account.County__c&quot;</description>
        <formula>Account.Congressional_District_formula__c</formula>
        <label>Org County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_State__c</fullName>
        <formula>Account.BillingState</formula>
        <label>Org State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <label>Org Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Contact__c</fullName>
        <description>The application contact with the role of Organization Contact.</description>
        <inlineHelpText>The application contact with the role of Organization Contact.</inlineHelpText>
        <label>Organization Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Organization_Corporate_Officer__c</fullName>
        <description>The application contact with the role of Organization Corporate Officer.</description>
        <inlineHelpText>The application contact with the role of Organization Corporate Officer.</inlineHelpText>
        <label>Organization Corporate Officer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Countries__c</fullName>
        <label>Other Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Congo, Democratic Republic of</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Equatorial Guinea</fullName>
                </value>
                <value>
                    <fullName>Eritrea</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>Gabon</fullName>
                </value>
                <value>
                    <fullName>Gambia</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Guinea</fullName>
                </value>
                <value>
                    <fullName>Guinea-Bissau</fullName>
                </value>
                <value>
                    <fullName>Ivory Coast</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Lesotho</fullName>
                </value>
                <value>
                    <fullName>Liberia</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Madagascar</fullName>
                </value>
                <value>
                    <fullName>Malawi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owners_Office__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_6_Office__c)</formula>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Primary_Outcome__c</fullName>
        <description>This field will be used to track the number of trade barriers reduced/removed/prevented while the case is in progress to predict the $ value impact of a WIN.</description>
        <inlineHelpText>Select Reduce/Remove/Prevent Trade Barrier when a foreign government’s practice, policy or procedure restricts U.S. exports and/or treats them unfairly, including foreign government non-compliance with a trade agreement.</inlineHelpText>
        <label>Potential Primary Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reduced/Removed/Prevented trade barrier</fullName>
                </value>
                <value>
                    <fullName>Created/Improved Business Opportunity</fullName>
                </value>
                <value>
                    <fullName>Facilitated export transaction</fullName>
                </value>
                <value>
                    <fullName>Reduced/Eliminated threat to US business</fullName>
                </value>
                <value>
                    <fullName>Compliance with trade agreement</fullName>
                    <isActive>false</isActive>
                    <label>Compliance with trade agreement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <label>Primary Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Congo, Democratic Republic of</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Equatorial Guinea</fullName>
                </value>
                <value>
                    <fullName>Eritrea</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>Gabon</fullName>
                </value>
                <value>
                    <fullName>Gambia</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Guinea</fullName>
                </value>
                <value>
                    <fullName>Guinea-Bissau</fullName>
                </value>
                <value>
                    <fullName>Ivory Coast</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Lesotho</fullName>
                </value>
                <value>
                    <fullName>Liberia</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Madagascar</fullName>
                </value>
                <value>
                    <fullName>Malawi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The related Application&apos;s Program.</description>
        <formula>Participation_Profile__r.Program__r.Name</formula>
        <inlineHelpText>The related Application&apos;s Program.</inlineHelpText>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Comment__c</fullName>
        <label>Recent Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>to select record type with one button publisher</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Commercial Diplomacy</fullName>
                </value>
                <value>
                    <fullName>Export Promotion</fullName>
                </value>
                <value>
                    <fullName>Investment Promotion</fullName>
                </value>
                <value>
                    <fullName>Client Assist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_type_selector__c</fullName>
        <description>to select record type with one button publisher</description>
        <inlineHelpText>If the wrong case type was selected, you can modify it here.</inlineHelpText>
        <label>Case Type Selector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Commercial Dipomacy</fullName>
                </value>
                <value>
                    <fullName>Export Promotion</fullName>
                </value>
                <value>
                    <fullName>Investment Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the objective of this case is a milestone towards an ultimate goal, you can relate this case to the parent/ultimate case record.</inlineHelpText>
        <label>Related Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Child Cases</relationshipLabel>
        <relationshipName>RelatedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the objective of this case is a milestone towards an ultimate goal, you can relate this case to the parent/ultimate case record.</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>RelatedCases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Case_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When record is created in error</inlineHelpText>
        <label>Request Case Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <description>Running user name</description>
        <formula>$User.FirstName + &apos; &apos; +  $User.LastName</formula>
        <label>Running User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_user_Case_Contributor__c</fullName>
        <label>Running user Case Contributor</label>
        <summaryFilterItems>
            <field>Case_Contributor__c.Contributor_Name__c</field>
            <operation>equals</operation>
            <value>$User.ID</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Contributor__c.Case_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUSA_Estimated_Investment_Amount__c</fullName>
        <inlineHelpText>Please estimate what the results of this case could be in dollar value if we successfully meet the client’s objectives.</inlineHelpText>
        <label>SUSA Estimated Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sensitive_Attachment_Links__c</fullName>
        <label>Sensitive Attachment Links</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sent Survey True</description>
        <label>Sent Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>Legacy SharePoint record ID</description>
        <label>SharePoint ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Org_Name__c</fullName>
        <description>Legacy SharePoint Organization Name</description>
        <label>SharePoint Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The site that the case originated from</description>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SuppliedCountry__c</fullName>
        <label>Web Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Send_Time__c</fullName>
        <formula>DATETIMEVALUE(DATE( year(DATEVALUE(ClosedDate)), month(DATEVALUE(ClosedDate)),day(DATEVALUE(ClosedDate)))) + 1 + 16.5/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sys_Owner_Added_as_Case_Contributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked by automation when the case contributor is added to the case. The case contributor is now added when all required taxonomies have been added.</description>
        <label>Sys Owner Added as Case Contributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sys_Region_in_Case_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sys Region in Case Rollup</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TANC_Case_Title__c</fullName>
        <description>Specific case title to be used only by E&amp;C TANC users</description>
        <inlineHelpText>Specific case title to be used only by E&amp;C TANC users</inlineHelpText>
        <label>TANC Case Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for data Migration purposes</description>
        <inlineHelpText>Field used for data Migration purposes</inlineHelpText>
        <label>Data Migration Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Barrier__c</fullName>
        <description>dummy placeholder</description>
        <label>Trade Barrier Area(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>Actual_Create_Date__c</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Advocacy,Case.Commercial_Diplomacy,Case.Export_Promotion,Case.Investment_Promotion</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>Actual_Create_Date__c</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Export_Promotion_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>Actual_Create_Date__c</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Advocacy,Case.Commercial_Diplomacy,Case.Export_Promotion,Case.Investment_Promotion</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Export_Promotion</value>
        </filters>
        <label>All Export Promotion Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Investment_Promotion_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>Actual_Create_Date__c</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Advocacy,Case.Commercial_Diplomacy,Case.Export_Promotion,Case.Investment_Promotion</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Investment_Promotion</value>
        </filters>
        <label>All Investment Promotion Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Non_TANC_Commercial_Diplomacy_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Commercial_Diplomacy</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>CD_Relevant_Agreement__c</field>
            <operation>notContain</operation>
            <value>Reviewed/Decision Pending,Yes,No</value>
        </filters>
        <label>All Non-TANC Commercial Diplomacy Cases</label>
        <sharedTo>
            <role>E_C_TANC</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Team</filterScope>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CasesOpen1yr</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Number_of_WINs_associated_to_Case__c</columns>
        <columns>Industry_Sector__c</columns>
        <columns>Primary_Country__c</columns>
        <columns>ACCOUNT.NAME_LOCAL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Days_Open__c</field>
            <operation>greaterOrEqual</operation>
            <value>365</value>
        </filters>
        <label>Cases Open &gt; 1 Yr</label>
    </listViews>
    <listViews>
        <fullName>Cases_to_Delete</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases to Delete</label>
    </listViews>
    <listViews>
        <fullName>Civil_Nuclear_Toolkit_Case</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Civil Nuclear Toolkit</label>
        <queue>Civil_Nuclear_Toolkit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>